--- a/templates/macros/gear-creator.hbs
+++ b/templates/macros/gear-creator.hbs
@@ -44,8 +44,7 @@
             class="base-form__textarea" 
             id="description" 
             name="description" 
-            placeholder="{{localize "EVENTIDE_RP_SYSTEM.Forms.Placeholders.Description"}}">
-          </textarea>
+            placeholder="{{localize "EVENTIDE_RP_SYSTEM.Forms.Placeholders.Description"}}"></textarea>
         </div>
       </div>
 
