--- a/templates/macros/gear-creator.hbs
+++ b/templates/macros/gear-creator.hbs
@@ -100,16 +100,19 @@
               name="iconTint" 
               value="{{ifThen storedData.gear_iconTint storedData.gear_iconTint "#ffffff"}}">
           </div>
-          <div class="base-form__group">
-            <label class="base-form__label" for="displayOnToken">
+          <div class="base-form__toggle-group">
+            <label for="displayOnToken">
               {{localize "EVENTIDE_RP_SYSTEM.Forms.Sections.DisplayOnToken"}}
             </label>
-            <input 
-              class="base-form__checkbox" 
-              type="checkbox" 
-              id="displayOnToken" 
-              name="displayOnToken" 
-              {{#if storedData.gear_displayOnToken}}checked{{/if}}>
+            <div class="toggle-switch-wrapper">
+              <input 
+                class="base-form__toggle-switch" 
+                type="checkbox" 
+                id="displayOnToken" 
+                name="displayOnToken" 
+                {{#if storedData.gear_displayOnToken}}checked{{/if}}>
+              <label class="toggle-switch-display" for="displayOnToken"></label>
+            </div>
           </div>
       </div>
     </div>
@@ -138,11 +141,19 @@
           <input class="base-form__number-input" type="number" id="cost" name="cost" value="0">
         </div>
 
-        <div class="base-form__group">
-          <label class="base-form__label" for="targeted">
+        <div class="base-form__toggle-group">
+          <label for="targeted">
             {{localize "EVENTIDE_RP_SYSTEM.Forms.Sections.Targeted"}}
           </label>
-          <input class="base-form__checkbox" type="checkbox" id="targeted" name="targeted" checked>
+          <div class="toggle-switch-wrapper">
+            <input 
+              class="base-form__toggle-switch" 
+              type="checkbox" 
+              id="targeted" 
+              name="targeted" 
+              checked>
+            <label class="toggle-switch-display" for="targeted"></label>
+          </div>
         </div>
 
         <div class="base-form__group">
@@ -161,28 +172,34 @@
           </select>
           </div>
 
-        <div class="base-form__group">
-          <label class="base-form__label" for="equipped">
+        <div class="base-form__toggle-group">
+          <label for="equipped">
             {{localize "EVENTIDE_RP_SYSTEM.Forms.Sections.Equipped"}}
           </label>
-          <input 
-            class="base-form__checkbox" 
-            type="checkbox" 
-            id="equipped" 
-            name="equipped" 
-            {{#if gearEquippedDefault}}checked{{/if}}>
+          <div class="toggle-switch-wrapper">
+            <input 
+              class="base-form__toggle-switch" 
+              type="checkbox" 
+              id="equipped" 
+              name="equipped" 
+              {{#if gearEquippedDefault}}checked{{/if}}>
+            <label class="toggle-switch-display" for="equipped"></label>
+          </div>
         </div>
 
         {{#if isGM}}
-          <div class="base-form__group">
-            <label class="base-form__label" for="cursed">
+          <div class="base-form__toggle-group">
+            <label for="cursed">
               {{localize "EVENTIDE_RP_SYSTEM.Forms.Sections.Cursed"}}
             </label>
-            <input 
-              class="base-form__checkbox" 
-              type="checkbox" 
-              id="cursed" 
-              name="cursed">
+            <div class="toggle-switch-wrapper">
+              <input 
+                class="base-form__toggle-switch" 
+                type="checkbox" 
+                id="cursed" 
+                name="cursed">
+              <label class="toggle-switch-display" for="cursed"></label>
+            </div>
           </div>
         {{/if}}
       </div>
