--- a/src/scss/global/_form-elements.scss
+++ b/src/scss/global/_form-elements.scss
@@ -82,28 +82,6 @@
   }
 }
 
-@mixin button-base {
-  background-color: colors.$button-bg !important;
-  color: colors.$button-text !important;
-  border: 1px solid colors.$button-border !important;
-  border-radius: 5px !important;
-  padding: 0.5rem 1rem !important;
-  cursor: pointer !important;
-  font-family: typography.$underdog !important;
-  transition: all 0.2s ease-in-out !important;
-  box-shadow: 0 0 0 0 transparent !important;
-
-  &:hover {
-    background-color: colors.$button-hover !important;
-    box-shadow: 0 0 15px 5px colors.$button-glow !important;
-  }
-
-  &:active {
-    background-color: colors.$button-active !important;
-    box-shadow: 0 0 8px 2px colors.$button-glow !important;
-  }
-}
-
 @mixin scrollbar-base {
   -ms-overflow-style: initial;
     scrollbar-width: thin;
@@ -130,7 +108,6 @@
       margin: 0;
     }
 }
-
 
 // Block
 .base-form {
@@ -452,39 +429,46 @@
   }
 
   &__button {
-    @include button-base;
-    min-width: 5rem !important;
-
+    @include mixins.grid-compliant-button;
+    
     &--primary {
-      background-color: colors.$primary-button-bg !important;
-      color: colors.$primary-button-text !important;
-      border-color: colors.$primary-button-border !important;
+      background-color: colors.$primary-button-bg;
+      color: colors.$primary-button-text;
+      border-color: colors.$primary-button-border;
 
       &:hover {
-        background-color: colors.$primary-button-hover !important;
-        color: colors.$primary-button-hover-text !important;
-        box-shadow: 0 0 0.9375rem 0.3125rem colors.$primary-button-glow !important;
+        background-color: colors.$primary-button-hover;
+        color: colors.$primary-button-hover-text;
+        box-shadow: 0 0 0.9375rem 0.3125rem colors.$primary-button-glow;
       }
 
       &:active {
-        background-color: colors.$primary-button-active !important;
-        box-shadow: 0 0 0.5rem 0.125rem colors.$primary-button-glow !important;
+        background-color: colors.$primary-button-active;
+        box-shadow: 0 0 0.5rem 0.125rem colors.$primary-button-glow;
       }
     }
 
     &--danger {
-      background-color: colors.$danger-button-bg !important;
-      color: colors.$danger-button-text !important;
-      border-color: colors.$danger-button-border !important;
+      background-color: colors.$danger-button-bg;
+      color: colors.$danger-button-text;
+      border-color: colors.$danger-button-border;
 
       &:hover {
-        background-color: colors.$danger-button-hover !important;
-        box-shadow: 0 0 0.9375rem 0.3125rem rgba(255, 0, 0, 0.4) !important;
+        background-color: colors.$danger-button-hover;
+        box-shadow: 0 0 0.9375rem 0.3125rem rgba(255, 0, 0, 0.4);
       }
     }
 
+    // Button spacing when multiple buttons are next to each other
     & + & {
-      margin-left: 0.5rem !important;
+      margin-left: 0.5rem;
+    }
+    
+    // Fixed-width variant
+    &--fixed {
+      width: auto;
+      min-width: 5rem;
+      display: inline-block;
     }
   }
 
